crates/k-rust/src/kast/snapshots/k_rust__kast__parser__tests__applications_tokens_and_sequences.snap
---
source: crates/k-rust/src/kast/parser.rs
description: "textual KAST:\n\n`pair,_`{S}(\n    #token(\"hello\\\\nworld\", \"String\"),,\n    X ~> foo(.::KList)\n)\n"
---
Apply {
    label: Label {
        name: "pair,_",
        parameters: [
            Sort {
                name: "S",
                parameters: [],
            },
        ],
    },
    arguments: [
        Token {
            token: "hello\\nworld",
            sort: Sort {
                name: "String",
                parameters: [],
            },
        },
        Sequence(
            [
                Variable {
                    name: "X",
                    sort: None,
                },
                Apply {
                    label: Label {
                        name: "foo",
                        parameters: [],
                    },
                    arguments: [],
                },
            ],
        ),
    ],
}
