crates/k-rust/src/kast/snapshots/k_rust__kast__parser__tests__rewrites_aliases_and_injected_labels.snap
---
source: crates/k-rust/src/kast/parser.rs
description: "textual KAST:\n\n``foo(X) #as Y`` ~> #klabel(`_+_`)\n"
---
Sequence(
    [
        As {
            pattern: Apply {
                label: Label {
                    name: "foo",
                    parameters: [],
                },
                arguments: [
                    Variable {
                        name: "X",
                        sort: None,
                    },
                ],
            },
            alias: Variable {
                name: "Y",
                sort: None,
            },
        },
        InjectedLabel(
            Label {
                name: "_+_",
                parameters: [],
            },
        ),
    ],
)
